--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div id="intro">
       <span class="name">Julio Ochoa</span>
       <br />
-      <span class="position-title">Design - Program Manager / Product Owner</span>
+      <span class="position-title">Design System Lead</span>
     </div>
   </div>
 
