CDS replaced workforce

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
     <div id="intro">
       <span class="name">Julio Ochoa</span>
       <br />
-      <span class="position-title">Design System Lead</span>
+      <span class="position-title">Design - Program Manager / Product Owner</span>
     </div>
   </div>
 
@@ -196,15 +196,15 @@
     <script src="js/scripts.min.js"></script>
 
 
-    <!-- Global site tag (gtag.js) - Google Analytics -->
-    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-110062040-1"></script>
-    <script>
-      window.dataLayer = window.dataLayer || [];
-      function gtag(){dataLayer.push(arguments);}
-      gtag('js', new Date());
+<!-- Global site tag (gtag.js) - Google Analytics -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=UA-110062040-1"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
 
-      gtag('config', 'UA-110062040-1');
-    </script>
+  gtag('config', 'UA-110062040-1');
+</script>
 
 </body>
 
