--- a/projects/urb-ob-ui/index.html
+++ b/projects/urb-ob-ui/index.html
@@ -23,6 +23,14 @@
             <h1>Urban observatory App</h1>
             <p>The Urban Observatory is an interactive exhibit that gives you the chance to compare and contrast maps of cities around the world all from one location. It aims to make the world’s data both understandable and useful. Brought to life by Richard Saul Wurman, RadicalMedia, and Esri, it is the first exhibit of its kind.</p>
             <p class="lien"><a href="http://www.urbanobservatory.org/" target="_blank">urbanobservatory.org</a></p>
+
+            <div class="infos">
+                <p><span class="op50">Role</span><br>UX, UI Designer<br>Touch Interactive Display</p>
+                <p><span class="op50">Year</span><br>2013</p>
+                <p><span class="op50">Time Frame</span><br>9 Months</p>
+                <p><span class="op50">Team Members</span><br>8</p>
+                <div class="clear"></div>
+            </div>
         </div>  
 
         <div id="captures">
